WIP new structure for feature cards

--- a/sites/tb.pro/index.html
+++ b/sites/tb.pro/index.html
@@ -23,30 +23,52 @@
 
 {% block features %}
 <div class="feature-card feature-card-1">
-  <div class="card-header">
-    <span class="app-icon"></span>
-    <div class="app-header">
-      <span class="app-name">Thundermail</span>
-      <span class="app-tagline">Email Confidently</span>
+  <div class="card-info">
+    <div class="card-header">
+      <span class="app-icon"></span>
+      <div class="app-header">
+        <span class="app-name">Thundermail</span>
+        <span class="app-tagline">Email Confidently</span>
+      </div>
     </div>
-  </div>
-  <div class="card-body">
-    <p>Send/receive emails with a privacy protecting host based in Germany and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.</p>
+    <div class="card-body">
+      <p>Send/receive emails with a privacy protecting host based in Germany and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.</p>
+    </div>
   </div>
   <div class="card-image">
   </div>
 </div>
 <div class="feature-card feature-card-2">
-  <span class="app-icon"></span>
-  <h3>Appointment</h3>
-  <h4>Schedule Easily</h4>
-  <p>Instead of exchanging multiple messages to schedule a meeting, select your availability and let Appointment handle the rest. Appointment is powered by open standards and compatible with Google Calendar. You can now schedule like a pro.</p>
+  <div class="card-info">
+    <div class="card-header">
+      <span class="app-icon"></span>
+      <div class="app-header">
+        <span class="app-name">Appointment</span>
+        <span class="app-tagline">Schedule Easily</span>
+      </div>
+    </div>
+    <div class="card-body">
+      <p>Instead of exchanging multiple messages to schedule a meeting, select your availability and let Appointment handle the rest. Appointment is powered by open standards and compatible with Google Calendar. You can now schedule like a pro.</p>
+    </div>
+  </div>
+  <div class="card-image">
+  </div>
 </div>
 <div class="feature-card feature-card-3">
-  <span class="app-icon"></span>
-  <h3>Send</h3>
-  <h4>Attach Securely</h4>
-  <p>Share large files with end-to-end encryption and fewer limits. Send provides a natural file attachment experience in Thunderbird Desktop and is compatible with any recipient’s inbox. Know your attachments will arrive safe and secure.</p>
+  <div class="card-info">
+    <div class="card-header">
+      <span class="app-icon"></span>
+      <div class="app-header">
+        <span class="app-name">Send</span>
+        <span class="app-tagline">Attach Securely</span>
+      </div>
+    </div>
+    <div class="card-body">
+      <p>Share large files with end-to-end encryption and fewer limits. Send provides a natural file attachment experience in Thunderbird Desktop and is compatible with any recipient’s inbox. Know your attachments will arrive safe and secure.</p>
+    </div>
+  </div>
+  <div class="card-image">
+  </div>
 </div>
 {% endblock %}
 
