CTA Button styling, placeholder sizes for images

--- a/sites/tb.pro/index.html
+++ b/sites/tb.pro/index.html
@@ -13,7 +13,7 @@
   <p>Add powerful cloud capabilities to Thunderbird and fund development of the always free and open source apps you love by subscribing to Pro.</p>
 </div>
 <a href="#" class="cta-button">
-  Subscribe Now
+  Join Waitlist
   {{ svg_img('tbpro/icons/arrow-right') }}
 </a>
 <div class="hero-image"></div>
