Remove redundant active_page sets.

--- a/sites/updates.thunderbird.net/thunderbird/140.0/jun25a/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/jun25a/index.html
@@ -7,6 +7,7 @@
 # in the user's preferred browser. This is hopefully less annoying for the end-user.
 #}
 
+{# active_page is mainly for css, don't set in child pages unless you modify this line to inherit #}
 {% set active_page = "appeal-jun25" %}
 
 {# For donation url generation #}
