subscription details draft

--- a/sites/tb.pro/index.html
+++ b/sites/tb.pro/index.html
@@ -98,12 +98,14 @@
 
 
 {% block details %}
-<header>
-  Subscribe Now
-</header>
-<p>
-Get Thundermail, Appointment, and Send in one simple subscription. You'll love the confidence, ease, and security these services add to Thunderbird. Thank you for supporting freedom.
-</p>
+<div class="subscription-header">
+  <header>
+    Subscribe Now
+  </header>
+  <p>
+    Get Thundermail, Appointment, and Send in one simple subscription. You'll love the confidence, ease, and security these services add to Thunderbird. Thank you for supporting freedom.
+  </p>
+</div>
 <div class="subscription-info">
   <div class="subscription-callout">
     <h3>Standard</h3>
