Add new hires (Sep 16 2025 Staff Updates) (#913)
* Sep 16 2025 Staff Member Updates

* ampersand instead of and

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -166,6 +166,7 @@
           {{ job_block(_('Director, Web Services'), 'Philipp Kewisch', high_res_img('thunderbird/staff/philipp_kewisch.png', scale='2x', alt_formats=('webp',)), True) }}
 
           {# Alphabetical by first name #}
+          {{ job_block(_('Business Systems & Data Platform Administrator'), 'Adam Polen', high_res_img('thunderbird/staff/adam_polen.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Software Engineer, Services'), 'Alejandro Aspinwall', high_res_img('thunderbird/staff/alejandro_aspinwall.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. UX Engineer, Desktop'), 'Alex Schmitz', high_res_img('thunderbird/staff/alexander_schmitz.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Principal Engineer'), 'Andrei Hajdukewycz', high_res_img('thunderbird/staff/andrei_hajdukewycz.png', scale='2x', alt_formats=('webp',))) }}
