--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -122,7 +122,7 @@
             this council is elected by contributors and acts as their voice in determining Thunderbird's strategic
             direction and goals. The Council oversees funds, approves budgets, and shapes the product roadmap,
             ensuring Thunderbird remains true to its core values.
-	   <a href="https://council.thunderbird.net/">Learn more about the Thunderbird Council</a>	
+	   <a class="strong"  href="{{ url('council.thunderbird.net') }}">{{ _('Learn more about the Thunderbird Council') }}</a>	
           {% endtrans %}
         </p>
       </div>
