--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -124,7 +124,7 @@
             ensuring Thunderbird remains true to its core values.
           {% endtrans %}
         </p>
-        <a class="strong"  href="{{ url('council.thunderbird.net') }}">{{ _('Learn more about the Thunderbird Council') }}</a>	
+        <a class="strong"  href="https://council.thunderbird.net">{{ _('Learn more about the Thunderbird Council') }}</a>	
       </div>
       <div>
         <div class="job-grid">
