Added a link to the Council site on the About page. (Fixes #926)(#927)

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -124,6 +124,7 @@
             ensuring Thunderbird remains true to its core values.
           {% endtrans %}
         </p>
+        <a class="strong"  href="https://council.thunderbird.net">{{ _('Learn more about the Thunderbird Council') }}</a>	
       </div>
       <div>
         <div class="job-grid">
