--- a/sites/tb.pro/index.html
+++ b/sites/tb.pro/index.html
@@ -8,8 +8,8 @@
 
 
 {% block masthead %}
-  <h1>Elevate Thunderbird, <span class="txt-gradient">Do More</span></h1>
-  <p>Add powerful cloud capabilities to Thunderbird and fund development of the always free and open source apps you love by subscribing to Pro.</p>
+<h1>Elevate Thunderbird, <div class="txt-gradient">Do More</div></h1>
+<p>Add powerful cloud capabilities to Thunderbird and fund development of the always free and open source apps you love by subscribing to Pro.</p>
 
 <a href="#" class="cta-button">
   Join Waitlist
