Uses draft of Bolt button styles

--- a/sites/tb.pro/index.html
+++ b/sites/tb.pro/index.html
@@ -10,11 +10,10 @@
 {% block masthead %}
 <h1>Elevate Thunderbird, <div class="txt-gradient">Do More</div></h1>
 <p>Add powerful cloud capabilities to Thunderbird and fund development of the always free and open source apps you love by subscribing to Pro.</p>
-
-<a href="#" class="cta-button">
+<button class="button-brand-filled-label-icon cta-button">
   Join Waitlist
   {{ svg_img('tbpro/icons/arrow-right') }}
-</a>
+</button>
 <div class="hero-image"></div>
 {% endblock %}
 
