--- a/sites/tb.pro/index.html
+++ b/sites/tb.pro/index.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="card-body">
-      <p>Send/receive emails with a privacy protecting host based in Germany and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.</p>
+      <p>Email hosting from Thunderbird is here. Send/receive emails with a privacy protecting provider based in Germany and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.</p>
     </div>
   </div>
   <div class="card-image" role="img" aria-label="Thunderbird desktop client showing two contact cards."></div>
