Differentiate hero images from product card images

--- a/sites/tb.pro/index.html
+++ b/sites/tb.pro/index.html
@@ -11,7 +11,7 @@
   Join Waitlist
   {{ svg_img('tbpro/icons/arrow-right') }}
 </button>
-<div class="hero-image"></div>
+<div class="hero-image tbpro"></div>
 {% endblock %}
 
 
