--- a/sites/tb.pro/thundermail/index.html
+++ b/sites/tb.pro/thundermail/index.html
@@ -5,75 +5,53 @@
 {% extends "includes/base/page.html" %}
 {% from 'includes/macros/right-arrow-cta-button.html' import right_arrow_cta_button %}
 
+{% block extra_css %}
+<link href="{{ static('css/thundermail.css') }}" rel="stylesheet" type="text/css" />
+{% endblock %}
+
 
 {% block masthead %}
-<h1>Elevate Thunderbird, <div class="txt-gradient">Do More</div></h1>
-<p>Add powerful cloud capabilities to Thunderbird and fund development of the always free and open source apps you love by subscribing to Pro.</p>
+<div class="product-logo"></div>
+
+<h1>Host Securely. Mail Confidently</h1>
+<p>
+Thundermail offers you email hosting with the same values as Thunderbird. Enjoy privacy, security, and freedom from client to inbox.
+</p>
 
 {{ right_arrow_cta_button('Join Waitlist', '', 'cta-button') }}
 
-<div class="hero-image tbpro"></div>
+<div class="hero-image thundermail"></div>
 {% endblock %}
 
 
-
-{% block features %}
-<div class="feature-card feature-card-1">
-  <div class="card-info">
-    <div class="card-header">
-      <span class="app-icon">
-        {{ svg_img('tbpro/icons/icon-thundermail') }}
-      </span>
-      <div class="app-header">
-        <span class="app-name">Thundermail</span>
-        <span class="app-tagline">Email Confidently</span>
-      </div>
-    </div>
-    <div class="card-body">
-      <p>Email hosting from Thunderbird is here. Send/receive emails with a privacy protecting provider based in Germany and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.</p>
-    </div>
+{% block overview %}
+<section id="overview">
+  <header>Meet Thundermail</header>
+  <p>Email hosting from Thunderbird is here. Send/receive emails with a privacy protecting provider based in Germany and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.</p>
+  <div class="overview-card overview-card-1">
+    <div class="overview-image"></div>
+    <header>Based on Modern Standards</header>
+    <p>
+      A clean, user-friendly scheduling tool that respects your privacy, stays lightweight, and keeps improving with the help of an open community. No bloat, no barriers—just better booking.
+    </p>
   </div>
-  <div class="card-image" role="img" aria-label="Thunderbird desktop client showing two contact cards."></div>
-</div>
-<div class="feature-card feature-card-2">
-  <div class="card-info">
-    <div class="card-header">
-      <span class="app-icon">
-        {{ svg_img('tbpro/icons/icon-appointment') }}
-      </span>
-      <div class="app-header">
-        <span class="app-name">Appointment</span>
-        <span class="app-tagline">Schedule Easily</span>
-      </div>
-    </div>
-    <div class="card-body">
-      <p>Instead of exchanging multiple messages to schedule a meeting, select your availability and let Appointment handle the rest. Appointment is powered by open standards and compatible with Google Calendar. You can now schedule like a pro.</p>
-    </div>
+  <div class="overview-card overview-card-2">
+    <header>Hosted Securely in Germany</header>
+    <p>
+      Your emails are protected by strict EU privacy laws and hosted on infrastructure you can trust. With servers located in Germany, Thundermail prioritizes your privacy while ensuring reliable, fast delivery worldwide.
+    </p>
+    <div class="overview-image"></div>
   </div>
-  <div class="card-image">
-
+  <div class="overview-card overview-card-3">
+    <header>Customizable Domain</header>
+    <p>
+      Choose from @thundermail.com or @tb.pro addresses, or bring your own custom domain for a professional touch. Your email, your identity, your way to have full control over how you present yourself online.
+    </p>
+    <div class="overview-image"></div>
   </div>
-</div>
-<div class="feature-card feature-card-3">
-  <div class="card-info">
-    <div class="card-header">
-      <span class="app-icon">
-        {{ svg_img('tbpro/icons/icon-send') }}
-      </span>
-      <div class="app-header">
-        <span class="app-name">Send</span>
-        <span class="app-tagline">Attach Securely</span>
-      </div>
-    </div>
-    <div class="card-body">
-      <p>Share large files with end-to-end encryption and fewer limits. Send provides a natural file attachment experience in Thunderbird Desktop and is compatible with any recipient’s inbox. Know your attachments will arrive safe and secure.</p>
-    </div>
-  </div>
-  <div class="card-image">
-
-  </div>
-</div>
+</section>
 {% endblock %}
+
 
 
 
@@ -99,33 +77,6 @@
 </div>
 {% endblock %}
 
-
-{% from 'includes/macros/carousel.html' import carousel_item, carousel_footer %}
-{% block testimonials %}
-  <div class="testimonials-background">
-    <section id="testimonials">
-      <header>What people are saying</header>
-      <div class="testimonials-slider">
-        <div class="testimonials-track">
-
-          {{ carousel_item('Even in beta, this new appointment service is easy to use and worth a look if your small business could benefit from online scheduling.', 'Fred Krueger', 'Contributing Writer, Website') }}
-
-          {{ carousel_item('Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus.', 'Jay Voorhees', 'Contributing Writer, Website') }}
-
-          {{ carousel_item('Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla.', 'Roy Burns', 'Contributing Writer, Website') }}
-
-          {{ carousel_item('Nullam rutrum. Nam vestibulum accumsan nisl. Donec hendrerit tempor tellus.', 'Pamela Voorhees', 'Contributing Writer, Website') }}
-
-          {{ carousel_item('Fusce suscipit, wisi nec facilisis facilisis, est dui fermentum leo, quis tempor ligula erat quis odio.', 'Lil Jay Voorhees', 'Contributing Writer, Website') }}
-
-        </div>
-      </div>
-
-      {{ carousel_footer() }}
-
-    </section>
-  </div>
-{% endblock %}
 
 {% block details %}
 <div class="subscription-header">
