--- a/sites/tb.pro/index.html
+++ b/sites/tb.pro/index.html
@@ -18,61 +18,64 @@
 
 
 {% block features %}
-<div class="feature-card feature-card-1">
-  <div class="card-info">
-    <div class="card-header">
-      <span class="app-icon">
-        {{ svg_img('tbpro/icons/icon-thundermail') }}
-      </span>
-      <div class="app-header">
-        <span class="app-name">Thundermail</span>
-        <span class="app-tagline">Email Confidently</span>
-      </div>
-    </div>
-    <div class="card-body">
-      <p>Email hosting from Thunderbird is here. Send/receive emails with a privacy protecting provider based in Germany and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.</p>
-    </div>
-  </div>
-  <div class="card-image" role="img" aria-label="Thunderbird desktop client showing two contact cards."></div>
-</div>
-<div class="feature-card feature-card-2">
-  <div class="card-info">
-    <div class="card-header">
-      <span class="app-icon">
-        {{ svg_img('tbpro/icons/icon-appointment') }}
-      </span>
-      <div class="app-header">
-        <span class="app-name">Appointment</span>
-        <span class="app-tagline">Schedule Easily</span>
-      </div>
-    </div>
-    <div class="card-body">
-      <p>Instead of exchanging multiple messages to schedule a meeting, select your availability and let Appointment handle the rest. Appointment is powered by open standards and compatible with Google Calendar. You can now schedule like a pro.</p>
-    </div>
-  </div>
-  <div class="card-image">
+<section id="features" class="primary-block">
 
-  </div>
-</div>
-<div class="feature-card feature-card-3">
-  <div class="card-info">
-    <div class="card-header">
-      <span class="app-icon">
-        {{ svg_img('tbpro/icons/icon-send') }}
-      </span>
-      <div class="app-header">
-        <span class="app-name">Send</span>
-        <span class="app-tagline">Attach Securely</span>
+  <div class="feature-card feature-card-1">
+    <div class="card-info">
+      <div class="card-header">
+        <span class="app-icon">
+          {{ svg_img('tbpro/icons/icon-thundermail') }}
+        </span>
+        <div class="app-header">
+          <span class="app-name">Thundermail</span>
+          <span class="app-tagline">Email Confidently</span>
+        </div>
+      </div>
+      <div class="card-body">
+        <p>Email hosting from Thunderbird is here. Send/receive emails with a privacy protecting provider based in Germany and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.</p>
       </div>
     </div>
-    <div class="card-body">
-      <p>Share large files with end-to-end encryption and fewer limits. Send provides a natural file attachment experience in Thunderbird Desktop and is compatible with any recipient’s inbox. Know your attachments will arrive safe and secure.</p>
+    <div class="card-image" role="img" aria-label="Thunderbird desktop client showing two contact cards."></div>
+  </div>
+  <div class="feature-card feature-card-2">
+    <div class="card-info">
+      <div class="card-header">
+        <span class="app-icon">
+          {{ svg_img('tbpro/icons/icon-appointment') }}
+        </span>
+        <div class="app-header">
+          <span class="app-name">Appointment</span>
+          <span class="app-tagline">Schedule Easily</span>
+        </div>
+      </div>
+      <div class="card-body">
+        <p>Instead of exchanging multiple messages to schedule a meeting, select your availability and let Appointment handle the rest. Appointment is powered by open standards and compatible with Google Calendar. You can now schedule like a pro.</p>
+      </div>
+    </div>
+    <div class="card-image">
+
     </div>
   </div>
-  <div class="card-image">
+  <div class="feature-card feature-card-3">
+    <div class="card-info">
+      <div class="card-header">
+        <span class="app-icon">
+          {{ svg_img('tbpro/icons/icon-send') }}
+        </span>
+        <div class="app-header">
+          <span class="app-name">Send</span>
+          <span class="app-tagline">Attach Securely</span>
+        </div>
+      </div>
+      <div class="card-body">
+        <p>Share large files with end-to-end encryption and fewer limits. Send provides a natural file attachment experience in Thunderbird Desktop and is compatible with any recipient’s inbox. Know your attachments will arrive safe and secure.</p>
+      </div>
+    </div>
+    <div class="card-image">
 
+    </div>
   </div>
-</div>
+</section>
 {% endblock %}
 
 
